clusters/managed/default/outline/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app outline
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://outline.trusted.nirmalhk7.com"
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: *app
    gethomepage.dev/app: *app # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Outline
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=outline"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`outline.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: *app
          port: 3000
